// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CurrencyInput > Styles > should render a currency as a prefix 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  padding-left: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":r7:"
    >
      <span
        class="circuit-2"
      >
        Amount
      </span>
    </label>
    <div
      class="circuit-3"
    >
      <span
        class="circuit-4"
        id=":r6:"
      >
        CHF
      </span>
      <input
        aria-describedby=":r6: :r8:"
        class="circuit-5"
        id=":r7:"
        inputmode="decimal"
        type="text"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`CurrencyInput > Styles > should render a currency as a suffix 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  padding-right: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-4::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-4:disabled,
.circuit-4[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-4:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-4:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-4:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

.circuit-5 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0;
  right: 0;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
  -webkit-transition: right 120ms ease-in-out;
  transition: right 120ms ease-in-out;
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":r4:"
    >
      <span
        class="circuit-2"
      >
        Amount
      </span>
    </label>
    <div
      class="circuit-3"
    >
      <input
        aria-describedby=":r3: :r5:"
        class="circuit-4"
        id=":r4:"
        inputmode="decimal"
        type="text"
        value=""
      />
      <span
        class="circuit-5"
        id=":r3:"
      >
        €
      </span>
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;

exports[`CurrencyInput > Styles > should render with default styles and format 1`] = `
.circuit-0[disabled],
.circuit-0.cui-field-disabled {
  pointer-events: none;
}

.circuit-1 {
  display: block;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.circuit-2 {
  display: inline-block;
  margin-bottom: 4px;
}

[disabled] .circuit-2,
.cui-field-disabled .circuit-2 {
  color: var(--cui-fg-normal-disabled);
}

.circuit-3 {
  position: relative;
}

.circuit-4 {
  line-height: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  pointer-events: none;
  color: var(--cui-fg-subtle);
  padding: 12px 16px;
  height: 48px;
  width: 48px;
}

.circuit-5 {
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-appearance: none;
  background-color: var(--cui-bg-normal);
  border: none;
  outline: 0;
  border-radius: 8px;
  padding: 12px 16px;
  -webkit-transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  transition: box-shadow 120ms ease-in-out,padding 120ms ease-in-out;
  width: 100%;
  margin: 0;
  text-align: right;
  padding-left: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-normal);
}

.circuit-5::-webkit-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::-moz-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:-ms-input-placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5::placeholder {
  color: var(--cui-fg-placeholder);
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  background-color: var(--cui-bg-normal-disabled);
}

.circuit-5:hover {
  box-shadow: 0 0 0 1px var(--cui-border-normal-hovered);
}

.circuit-5:focus {
  box-shadow: 0 0 0 2px var(--cui-border-accent);
}

.circuit-5:active {
  box-shadow: 0 0 0 1px var(--cui-border-accent);
}

<div>
  <div
    class=" circuit-0"
  >
    <label
      class="circuit-1"
      for=":r1:"
    >
      <span
        class="circuit-2"
      >
        Amount
      </span>
    </label>
    <div
      class="circuit-3"
    >
      <span
        class="circuit-4"
        id=":r0:"
      >
        $
      </span>
      <input
        aria-describedby=":r0: :r2:"
        class="circuit-5"
        id=":r1:"
        inputmode="decimal"
        type="text"
        value=""
      />
    </div>
    <span
      aria-live="polite"
      role="status"
    />
  </div>
</div>
`;
